welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:22: error: ';' expected but ')' found.
    	                    setCouleurBrosse(T((j+ch.tiInt(litMessageSol())))%((getWorldHeight()))));
                                                                                                   ^